unpackaged/main/default/objects/Significant_Event_Contact__c/Significant_Event_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction object to connect Accounts to Significant Event</description>
    <label>Significant Event Contact</label>
    <nameField>
        <displayFormat>SEC-{0000000}</displayFormat>
        <label>Significant Event Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Significant Event Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>