unpackaged/main/default/objects/Significant_Event_Contact__c/fields/Significant_Event__c.field-meta.xml
<CustomField>
    <fullName>Significant_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Significant Event</label>
    <referenceTo>Significant_Event__c</referenceTo>
    <relationshipName>Significant_Event_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>